--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,7 @@
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
 
-  --primary: oklch(76.444% 0.18759 155.363); /* Зелёный Vue (светлая тема) */
+  --primary: oklch(75.206% 0.18002 156.316); /* Зелёный Vue (светлая тема) */
   --primary-foreground: oklch(28.336% 0.06561 156.979);
 
   --secondary: oklch(94.611% 0.00011 271.152);
@@ -86,7 +86,7 @@
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
 
-  --radius: 1.2rem;
+  --radius: 1rem;
 
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
@@ -140,18 +140,7 @@
   * {
     @apply border-border outline-ring/50;
   }
-  body {
-    @apply text-foreground !overflow-visible;
-  }
 }
-
-body {
-  background-image: url('../public/img/bg-main1.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
@@ -163,7 +152,13 @@ body {
     scrollbar-width: none; /* Firefox */
   }
 
+  .light-background {
+    background-image: url('../public/img/bg-main1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
   .light-bordered {
-    @apply border border-input backdrop-blur-lg bg-popover/10 hover:bg-popover/20 active:bg-popover/20 focus:bg-popover/30 hover:border-muted-foreground/50 shadow-xs hover:text-accent-foreground;
+    @apply border border-input backdrop-blur-lg bg-popover/10 hover:bg-popover/20 active:bg-popover/20  hover:border-muted-foreground/50 shadow-xs hover:text-accent-foreground;
   }
 }
