--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -86,7 +86,7 @@
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
 
-  --radius: 1rem;
+  --radius: 0.75rem;
 
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
@@ -118,7 +118,7 @@
   --destructive: oklch(0.396 0.141 25.723);
   --destructive-foreground: oklch(0.637 0.237 25.331);
   --border: oklch(0.269 0 0);
-  --input: oklch(0.269 0 0);
+  --input: oklch(35.233% 0.00004 271.152);
   --ring: oklch(0.7862 0.192 155.63);
 
   --chart-1: oklch(0.488 0.243 264.376);
@@ -140,6 +140,10 @@
   * {
     @apply border-border outline-ring/50;
   }
+
+  body {
+    @apply bg-background;
+  }
 }
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
@@ -152,12 +156,6 @@
     scrollbar-width: none; /* Firefox */
   }
 
-  .light-background {
-    background-image: url('/img/bg-main1.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
   .light-bordered {
     @apply border border-input backdrop-blur-lg bg-popover/10 hover:bg-popover/20 active:bg-popover/20  hover:border-muted-foreground/50 shadow-xs hover:text-accent-foreground;
   }
@@ -165,4 +163,20 @@
   .ringed {
     @apply border border-ring bg-popover/30 ring-ring/50 ring-[3px] backdrop-blur-lg shadow-xs;
   }
+}
+
+/* body {
+  background-image: url('/img/bg-main1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+} */
+
+.x-pad {
+  @apply xl:px-60 lg:px-16 md:px-12 sm:px-8 px-4;
+}
+
+.form-bg {
+  background-image: url('/img/form-bump.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
