--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -52,14 +52,14 @@
   --background: oklch(99.107% 0.00011 271.152);
   --foreground: oklch(0% 0 0);
 
-  --card: oklch(100% 0.00011 271.152);
+  --card: oklch(99.107% 0.00011 271.152);
   --card-foreground: oklch(0.145 0 0);
 
-  --popover: oklch(1 0 0);
+  --popover: oklch(93.403% 0.00011 271.152);
   --popover-foreground: oklch(0.145 0 0);
 
-  --primary: oklch(75.206% 0.18002 156.316); /* Зелёный Vue (светлая тема) */
-  --primary-foreground: oklch(28.336% 0.06561 156.979);
+  --primary: oklch(81.163% 0.20779 152.715); /* Зелёный Vue (светлая тема) */
+  --primary-foreground: oklch(24.778% 0.06219 150.206);
 
   --secondary: oklch(94.611% 0.00011 271.152);
   --secondary-foreground: oklch(0.205 0 0);
@@ -156,12 +156,12 @@
     scrollbar-width: none; /* Firefox */
   }
 
-  .light-bordered {
-    @apply border border-input backdrop-blur-lg bg-popover/10 hover:bg-popover/20 active:bg-popover/20  hover:border-muted-foreground/50 shadow-xs hover:text-accent-foreground;
-  }
-
   .ringed {
     @apply border border-ring bg-popover/30 ring-ring/50 ring-[3px] backdrop-blur-lg shadow-xs;
+  }
+
+  [data-slot='form-message'] {
+    @apply text-xs md:text-sm;
   }
 }
 
@@ -172,7 +172,7 @@
 } */
 
 .x-pad {
-  @apply xl:px-60 lg:px-16 md:px-12 sm:px-8 px-4;
+  @apply xl:px-40 lg:px-16 md:px-8 sm:px-4 px-2;
 }
 
 .form-bg {
